<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/chapter06"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/main_page"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/button_introduction"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnToPageTwo"
        android:text="@string/button_to_page_two"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/input_data"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtData"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/edtDataInteger"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill,LabelFor" />

</LinearLayout>